--- a/loader.html
+++ b/loader.html
@@ -1,60 +1,128 @@
 <style>
-  body,
-  html,
-  #<%=globals.id %> {
-    background: <%=options.background %>;
-    width: 100%;
-    height: 100%;
+  #nuxt-loading {
+    /* background: <%=options.background %>; */
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
-    padding: 0;
+    flex-direction: column;
+    animation: nuxtLoadingIn 10s ease;
+    -webkit-animation: nuxtLoadingIn 10s ease;
+    animation-fill-mode: forwards;
+    overflow: hidden;
   }
 
-  .spinner {
-    width: 40px;
-    height: 40px;
-    background-color: <%=options.color %>;
-
-    border-radius: 100%;
-    -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
-    animation: sk-scaleout 1.0s infinite ease-in-out;
-  }
-
-  @-webkit-keyframes sk-scaleout {
+  @keyframes nuxtLoadingIn {
     0% {
-      -webkit-transform: scale(0)
+      visibility: hidden;
+      opacity: 0.2;
+    }
+
+    20% {
+      visibility: visible;
+      opacity: 0.2;
     }
 
     100% {
-      -webkit-transform: scale(1.0);
-      opacity: 0;
+      visibility: visible;
+      opacity: 1;
     }
   }
 
-  @keyframes sk-scaleout {
+  @-webkit-keyframes nuxtLoadingIn {
     0% {
-      -webkit-transform: scale(0);
-      transform: scale(0);
+      visibility: hidden;
+      opacity: 0.2;
+    }
+
+    20% {
+      visibility: visible;
+      opacity: 0.2;
     }
 
     100% {
-      -webkit-transform: scale(1.0);
-      transform: scale(1.0);
-      opacity: 0;
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  #nuxt-loading>div,
+  #nuxt-loading>div:after {
+    border-radius: 50%;
+    width: 5rem;
+    height: 5rem;
+  }
+
+  #nuxt-loading>div {
+    font-size: 10px;
+    position: relative;
+    text-indent: -9999em;
+    border: .5rem solid <%=options.color2 %>;
+    border-left: .5rem solid <%=options.color %>;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: nuxtLoading 1.1s infinite linear;
+    animation: nuxtLoading 1.1s infinite linear;
+  }
+
+  #nuxt-loading.error>div {
+    border-left: .5rem solid #ff4500;
+    animation-duration: 5s;
+  }
+
+  @-webkit-keyframes nuxtLoading {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+
+  @keyframes nuxtLoading {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
     }
   }
 </style>
 
-<div style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
-  <div style="font-family:Arial, Helvetica, sans-serif;padding-bottom: 24px;"> Covid-19 Vaccine Tracker | Thailand
-  </div>
-  <div class="spinner">
-    <div class="double-bounce1"></div>
-    <div class="double-bounce2"></div>
+<script>
+  window.addEventListener('error', function () {
+    var e = document.getElementById('nuxt-loading');
+    if (e) {
+      e.className += ' error';
+    }
+  });
+</script>
+
+<div
+  style="position:absolute;top:-140px;left:0;right:0;bottom:0;display:flex;flex-direction:column;justify-content:center;align-items:center;">
+  <div style="font-family:Arial, Helvetica, sans-serif;padding-bottom: 24px;">
+    Covid-19 Vaccine Tracker | Thailand
   </div>
 </div>
+<div id="nuxt-loading" aria-live="polite" role="status">
+  <div>
+    <%= options.loading %>
+  </div>
+</div>
+
 
 
 <%= options.dev ? '<!-- http://tobiasahlin.com/spinkit -->' : '' %>
